# aiogram3_di

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
aiogram3_di/: __init__.py  depends.py  middleware.py  resolver.py  utils.py
example/: async_dependency.py  async_generator_dependency.py  dependency.py  dependency_overrides.py  generator_dependency.py  handler_dependency.py  sub_dependency.py
src/aiogram3_di/: __init__.py  manager.py  middleware.py  resolver.py  setup.py  utils.py
tests/: conftest.py  test_cache.py  test_dependency_overrides.py  test_disable_cache.py  test_extract_params.py  test_get_dependencies.py  test_get_sub_dependencies.py  test_get_valid_kwargs.py  test_resolve_dependencies.py  test_setup_di.py
